--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/test"
+    android:id="@+id/lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".HistoryList">
+    tools:context=".view.HistoryList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHistory"
