--- a/app/src/main/res/layout/fragment_argb.xml
+++ b/app/src/main/res/layout/fragment_argb.xml
@@ -5,10 +5,11 @@
     android:id="@+id/FrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArgbFragment">
+    tools:context=".view.ArgbFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lay"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -85,7 +86,7 @@
             android:id="@+id/startArgb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
+            android:text="@string/start"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
