--- a/app/src/main/res/layout/history_list_item.xml
+++ b/app/src/main/res/layout/history_list_item.xml
@@ -13,6 +13,13 @@
             android:layout_gravity="center_vertical|start"
             android:text="test" />
 
+    <Button
+        android:id="@+id/negative"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/negative_button" />
+
     <LinearLayout
         android:id="@+id/colorBlock"
         android:layout_width="wrap_content"
