--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <item
         android:id="@+id/open_history_item"
@@ -13,4 +13,10 @@
     <item
         android:id="@+id/open_reference"
         android:title="reference" />
+    <item
+        android:id="@+id/settings"
+        android:title="settings" />
+    <item
+        android:id="@+id/open_db_activity"
+        android:title="database" />
 </menu>
