--- a/app/src/main/res/layout/activity_d_bactivity.xml
+++ b/app/src/main/res/layout/activity_d_bactivity.xml
@@ -33,12 +33,12 @@
         android:id="@+id/clean_text_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="60dp"
         android:text="@string/clearTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.427"
+        app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delete_db_data_button" />
+        app:layout_constraintTop_toBottomOf="@+id/get_db_service_data" />
 
     <TextView
         android:id="@+id/text_area"
@@ -49,4 +49,13 @@
         app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/get_db_service_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/getDataFromSrvice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/delete_db_data_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
