--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,11 +10,56 @@
         android:id="@+id/chooseSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:entries="@array/size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.134" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/settingsText" />
+
+        <LinearLayout
+            android:id="@+id/menuList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/historyBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/historyBox" />
+
+            <CheckBox
+                android:id="@+id/backProcBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/backProcessBox" />
+
+            <CheckBox
+                android:id="@+id/referenceBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/referenceBox" />
+
+            <CheckBox
+                android:id="@+id/databaseBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/databaseBox" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
