--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,4 +19,7 @@
     <item
         android:id="@+id/settings"
         android:title="settings" />
+    <item
+        android:id="@+id/open_animation_item"
+        android:title="animation" />
 </menu>
